# colorful-language

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md
.continuum/: release.yml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
consumers/: graft-projection.mjs  graft-projection.test.mjs
contracts/colorful/: syntax.v1.graphql  vocabulary.v1.graphql  vocabulary.v1.json
crates/colorful-cli/: Cargo.toml
crates/colorful-cli/fixtures/: editor-smoke-prose.txt
crates/colorful-cli/src/: lib.rs  main.rs
crates/colorful-core/: Cargo.toml
crates/colorful-core/src/: lib.rs
crates/colorful-ir/: Cargo.toml
crates/colorful-ir/contracts/: syntax.v1.graphql  vocabulary.v1.graphql  vocabulary.v1.json
crates/colorful-ir/examples/: recanon.rs
crates/colorful-ir/src/: lib.rs  vocabulary.rs
crates/colorful-ir/ts/: syntax_v1.ts  vocabulary_v1.ts
crates/colorful-lexicon/: Cargo.toml
crates/colorful-lexicon/src/: lib.rs
crates/colorful-lint/: Cargo.toml
crates/colorful-lint/src/: lib.rs
crates/colorful-lsp/: Cargo.toml
crates/colorful-lsp/src/: lib.rs  main.rs
crates/colorful-parse/: Cargo.toml
crates/colorful-parse/src/: lib.rs
docs/: DOCUMENTATION_STANDARDS.md  README.md  RELEASING.md
docs/design/: 0001-scope-and-delivery.md  0002-hexagonal-ports.md  0003-pure-rust-parser.md
docs/goalposts/v0.1.0/: release.md  verification.md
docs/goalposts/v0.2.0/: release.md  verification.md
docs/goalposts/v0.2.1/: release.md  verification.md
docs/goalposts/v0.3.0/: release.md  verification.md
docs/topics/coloring/: README.md  test-plan.md
docs/topics/distribution/: README.md  test-plan.md
docs/topics/downstream-consumers/: README.md  test-plan.md
docs/topics/editor-integrations/: README.md  test-plan.md
docs/topics/ir/: README.md  architecture.md  test-plan.md
docs/topics/lexicon/: README.md  test-plan.md
docs/topics/linting/: README.md  test-plan.md
docs/topics/open-class-pos/: README.md  test-plan.md
docs/topics/parsing/: README.md  test-plan.md
docs/topics/release-process/: README.md  test-plan.md
docs/workflows/: README.md
docs/workflows/release-process/: README.md  test-plan.md
editors/: README.md
editors/vscode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/src/: lib.rs
scripts/: gen-ir.sh  install-local.sh  ir-witness.sh  package-witness.sh  release-preflight.sh  release-prep.sh  release-profile-check.sh
witness/: fixture.txt  ir-canonicalize.mjs  ir-consume.ts  tsconfig.json
