[package]
name = "colorful-core"
description = "Domain types and ports (Parser, Lexicon, Annotator) for colorful-language."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["prose", "english", "part-of-speech", "parsing", "nlp"]
categories = ["text-processing", "parser-implementations"]

[dependencies]
